# cpp-template-console

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json  version.h.in
.template/: template.json
.zed/: debug.json  settings.json
cmake/: @NAME@Config.cmake.in  cmake_uninstall.cmake.in
src/: main.cpp
